--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -38,6 +38,7 @@ body {
     margin-block: 3rem 1rem;
     background-color: #fff;
     height: 7rem;
+    max-width: 100%;
     padding: 1rem;
     border-radius: 1rem;
     flex-direction: column;
@@ -45,6 +46,7 @@ body {
     font-size: 2rem;
     font-weight: bold;
     color: #3f4452;
+    overflow:auto;
 }
 
 .buttons {
