--- a/tribute page/public/assets/styles.css
+++ b/tribute page/public/assets/styles.css
@@ -8,7 +8,8 @@ body {
     font-family: "EB Garamond", serif;
 }
 
-#main {
+#main,
+footer {
     background-color: #000;
 }
 
@@ -48,4 +49,154 @@ img {
     height: 3px;
     border-radius: 100px;
     background-color: rgb(252, 96, 5);
+}
+
+#about {
+    background-color: rgb(250, 237, 235);
+}
+
+.about-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 400px;
+    padding-inline: 30rem;
+}
+
+.about-text,
+.quote-group {
+    width: 20rem;
+}
+
+.about-title {
+    color: rgb(252, 96, 5);
+    font-size: 2rem;
+    line-height: 2.5rem;
+}
+
+.second {
+    margin-block: 0.5rem 1rem;
+}
+
+.about-description {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: darkslategrey;
+}
+
+.quote {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    font-style: italic;
+    color: darkslategrey;
+
+}
+
+.fa-solid {
+    color: rgb(252, 96, 5);
+    font-size: 1.5rem;
+}
+
+footer {
+    height: 7rem;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h5 {
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .main-text {
+        width: 100%;
+    }
+
+    .divider {
+        margin: auto;
+        width: 10%;
+        margin-block: 0.8rem;
+    }
+
+    .main-description {
+        margin-bottom: 5rem;
+    }
+
+    #about {
+        padding-block: 5rem;
+        text-align: center;
+    }
+
+    .about-container {
+        flex-direction: column;
+        padding-inline: 10rem;
+    }
+
+    .about-text {
+        width: 100%;
+    }
+
+    .quote-group {
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    #about {
+        padding-block: 2rem;
+    }
+
+    .about-container {
+        padding-inline: 5rem;
+    }
+
+}
+
+@media screen and (max-width: 375px) {
+    .main-title {
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+
+    .main-subtitle {
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
+    .about-title {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    .about-description {
+        font-size: 0.8rem;
+        line-height: 1rem;
+    }
+
+    .quote {
+        font-size: 0.8rem;
+        line-height: 1rem;
+    }
+
+    .fa-solid {
+        font-size: 1rem;
+    }
+
+    footer h5 {
+        font-size: 1rem;
+    }
 }
